--- a/Kaggle Campus Recruitment NB.ipynb
+++ b/Kaggle Campus Recruitment NB.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "![Recruitment](https://cdn.pixabay.com/photo/2017/08/05/17/16/business-2584713_960_720.jpg)\n",
     "Kaggle Dataset from Ben Roshan D: <br></br>\n",
-    "[Source (Acessed 2020-05-21)](https://www.kaggle.com/benroshan/factors-affecting-campus-placement)\n",
+    "[Source (Accessed 2020-05-21)](https://www.kaggle.com/benroshan/factors-affecting-campus-placement)\n",
     "\n",
     "<br></br>\n",
     "<br></br>\n",
